--- a/Ecoleta/styles/create-point.css
+++ b/Ecoleta/styles/create-point.css
@@ -120,3 +120,57 @@ form .button{
     align-items: center;
     justify-content: center;
 }
+
+.items-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 16px;
+    
+}
+
+.items-grid li{
+    background-color: #f5f5f5;
+    padding: 10px;
+    list-style: none;
+
+    border: 2px solid #f5f5f5;
+    border-radius: 8px;
+
+    height: 180px;
+
+    padding: 32px 24px 16px;
+
+    display: flex;
+
+    flex-direction: column;
+
+    align-items: center;
+    justify-content: space-between;
+
+    text-align: center;
+
+    cursor: pointer;
+
+}
+
+.items-grid li span{
+    margin-top: 12px;
+    flex: 1;
+
+    display: flex;
+    align-items: center;
+
+    color: var(--title-color);
+}
+
+.items-grid li.selected{
+    background-color: #e1faec;
+    border: 2px solid #34cb79;
+
+}
+
+.items-grid li img,
+.items-grid li span{
+    pointer-events: none;
+}
+
